--- a/index.html
+++ b/index.html
@@ -3,10 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portal de Notícias</title>
+    <title>TechNews</title>
     <link rel="stylesheet" href="/styles/index.css">
 </head>
 <body>
-  
+  <header class="container">
+    <nav id="primary" class="grid grid-flow-col">
+        <div>
+            <img src="assets/icons/List.svg" alt="Menu Icon">
+            <strong>Menu</strong>
+        </div>
+
+        <div>
+            <img src="assets/icons/TechNews.svg" alt="TechNews Logo">
+        </div>
+
+        <div>
+            <strong>Buscar</strong>
+            <img src="assets/icons/MagnifyingGlass.svg" alt="MagnifyingGlass Icon">
+        </div>
+    </nav>
+    <nav id="secondary" class="grid grid-flow-col">
+        <a href="#">Artificial Inteligence</a>
+        <a href="#">Blockchain</a>
+        <a href="#">Holograms</a>
+        <a href="#">Internet</a>
+        <a href="#">Clothes</a>
+        <a href="#">Stretched Reality</a>
+        <a href="#">Virtual Reality</a>
+    </nav>
+  </header>
 </body>
 </html>
