--- a/index.html
+++ b/index.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TechNews</title>
-    <link rel="stylesheet" href="/styles/index.css">
-</head>
-<body>
-  <header class="container">
-    <nav id="primary" class="grid grid-flow-col">
+    <link rel="stylesheet" href="/styles/index.css" />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header class="container">
+      <nav id="primary" class="grid grid-flow-col">
         <div>
-            <img src="assets/icons/List.svg" alt="Menu Icon">
-            <strong>Menu</strong>
+          <img src="assets/icons/List.svg" alt="Menu Icon" />
+          <strong>Menu</strong>
         </div>
 
         <div>
-            <img src="assets/icons/TechNews.svg" alt="TechNews Logo">
+          <img src="assets/icons/TechNews.svg" alt="TechNews Logo" />
         </div>
 
         <div>
-            <strong>Buscar</strong>
-            <img src="assets/icons/MagnifyingGlass.svg" alt="MagnifyingGlass Icon">
+          <strong>Buscar</strong>
+          <img
+            src="assets/icons/MagnifyingGlass.svg"
+            alt="MagnifyingGlass Icon"
+          />
         </div>
-    </nav>
-    <nav id="secondary" class="grid grid-flow-col">
+      </nav>
+      <nav id="secondary" class="grid grid-flow-col">
         <a href="#">Artificial Inteligence</a>
         <a href="#">Blockchain</a>
         <a href="#">Holograms</a>
@@ -31,31 +42,36 @@
         <a href="#">Clothes</a>
         <a href="#">Stretched Reality</a>
         <a href="#">Virtual Reality</a>
-    </nav>
-  </header>
-  <main class="grid container">
-    <section id="featured" class="grid grid-flow-col gap-16">
-        <div class="card">
-            <img src="assets/images/Image 01.png" alt="">
-        </div>
-            <div class="grid grid-cols-2 gap-16">
-            <div>
-                <img src="assets/images/Image 02.png" alt="">
-            </div>
-            <div>
-                <img src="assets/images/Image 03.png" alt="">
-            </div>
-            <div>
-                <img src="assets/images/Image 04.png" alt="">
-            </div>
-            <div>
-                <img src="assets/images/Image 05.png" alt="">
-            </div>
-        </div>
-        
+      </nav>
+    </header>
+    <main class="grid container">
+      <section id="featured" class="grid grid-flow-col gap-16">
+        <figure class="card">
+          <img src="assets/images/Image 01.png" alt="" />
 
-       
-    </section>
-  </main>
-</body>
+          <figcaption>
+            <span class="content-tag">Robótica</span>
+            <h2 class="text-2xl">
+              Robôs domésticos começam a ser adotados para tarefas diárias,
+              prometendo mais conforto e eficiência nas residências.
+            </h2>
+          </figcaption>
+        </figure>
+        <div class="grid grid-cols-2 gap-16">
+          <div>
+            <img src="assets/images/Image 02.png" alt="" />
+          </div>
+          <div>
+            <img src="assets/images/Image 03.png" alt="" />
+          </div>
+          <div>
+            <img src="assets/images/Image 04.png" alt="" />
+          </div>
+          <div>
+            <img src="assets/images/Image 05.png" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
