--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         </div>
       </nav>
       <nav id="secondary" class="grid grid-flow-col">
-        <a href="#">Artificial Inteligence</a>
+        <a href="#">Inteligência Artificial</a>
         <a href="#">Blockchain</a>
-        <a href="#">Holograms</a>
+        <a href="#">Hologramas</a>
         <a href="#">Internet</a>
-        <a href="#">Clothes</a>
+        <a href="#">Vestívei</a>
         <a href="#">Stretched Reality</a>
-        <a href="#">Virtual Reality</a>
+        <a href="#">Realidade Virtual</a>
       </nav>
     </header>
     <main class="grid container">
@@ -58,18 +58,46 @@
           </figcaption>
         </figure>
         <div class="grid grid-cols-2 gap-16">
-          <div>
+          <figure class="card">
             <img src="assets/images/Image 02.png" alt="" />
-          </div>
-          <div>
-            <img src="assets/images/Image 03.png" alt="" />
-          </div>
-          <div>
+            <figcaption>
+              <span class="content-tag">Holograma</span>
+              <h3 class="text-lg">
+                Novo Smartphone Projetor 3D chega ao mercado, transformando a
+                forma como vemos nossas telas!
+              </h3>
+            </figcaption>
+          </figure>
+          <figure class="card">
             <img src="assets/images/Image 04.png" alt="" />
-          </div>
-          <div>
+            <figcaption>
+              <span class="content-tag">Internet</span>
+              <h3 class="text-lg">
+                Tecnologia 6G chega às metrópoles brasileiras, prometendo
+                revolucionar a forma como vivemos e nos comunicamos.
+              </h3>
+            </figcaption>
+          </figure>
+          <figure class="card">
+            <img src="assets/images/Image 03.png" alt="" />
+            <figcaption>
+              <span class="content-tag">Vestíveis</span>
+              <h3 class="text-lg">
+                Empresa lança relógio inteligente capaz de monitorar a saúde
+                mental, oferecendo insights valiosos para o bem-estar pessoal.
+              </h3>
+            </figcaption>
+          </figure>
+          <figure class="card">
             <img src="assets/images/Image 05.png" alt="" />
-          </div>
+            <figcaption>
+              <span class="content-tag">Realidade Virtual</span>
+              <h3 class="text-lg">
+                Escolas adotam a tecnologia VR para proporcionar experiências
+                imersivas, transformando a aprendizagem tradicional.
+              </h3>
+            </figcaption>
+          </figure>
         </div>
       </section>
     </main>
