--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <img src="assets/images/Image 06.png" alt="" />
             <p>
               Protótipo de veículo voador é apresentado, marcando o início da
-              era dos transportes aéreos pessoais.
+              era dos transportes aéreos pessoa...
             </p>
           </figure>
           <figure>
@@ -124,8 +124,7 @@
             <img src="assets/images/Image 07.png" alt="" />
             <p>
               Plataforma de videoconferência apresenta nova função de
-              hologramas, tornando as chamadas virtuais mais realistas e
-              envolventes.
+              hologramas, tornando as chamada...
             </p>
           </figure>
           <figure>
@@ -133,7 +132,7 @@
             <img src="assets/images/Image 08.png" alt="" />
             <p>
               Nova geração de consoles de videogame é lançada, trazendo gráficos
-              ultra-realistas e experiências de jogo totalmente envolventes.
+              ultra-realistas e experiên...
             </p>
           </figure>
           <figure>
@@ -237,7 +236,7 @@
         </div>
       </section>
 
-      <div>
+      <aside>
         <div id="ads">
           <img src="assets/Ads.png" alt="" />
         </div>
@@ -261,7 +260,7 @@
                 <span class="content-tag">Software</span>
                 <h3 class="text-xl">
                   Aplicativo de monitoramento ambiental ganha destaque,
-                  incentivando práticas ecológicas e pro...
+                  incentivando prá...
                 </h3>
               </div>
             </article>
@@ -274,7 +273,7 @@
                 <span class="content-tag">Realidade Virtual</span>
                 <h3 class="text-xl">
                   Óculos de realidade virtual com feedback tátil proporcionam
-                  uma experiência sensorial complet...
+                  uma experiência sensorial...
                 </h3>
               </div>
             </article>
@@ -287,7 +286,7 @@
                 <span class="content-tag">Criptomoedas</span>
                 <h3 class="text-xl">
                   Surge uma nova moeda digital baseada em tecnologias
-                  sustentáveis, buscando minimizar o i...
+                  sustentáveis, buscando minimizar...
                 </h3>
               </div>
             </article>
@@ -313,13 +312,13 @@
                 <span class="content-tag">Impressão 3D</span>
                 <h3 class="text-xl">
                   Tecnologia inovadora permite a impressão 3D de órgãos humanos,
-                  revolucionando a medicina e a li...
+                  revolucionando a medicina...
                 </h3>
               </div>
             </article>
           </div>
         </section>
-      </div>
+      </aside>
     </main>
   </body>
 </html>
